Cheap button fix
The removal button on the quiz generation page was misaligned and
has now been replaced with a cheap workaround button. This will
probably be revisted in the future.

--- a/css/index.css
+++ b/css/index.css
@@ -41,22 +41,22 @@ ul {
     border-bottom-color: blue;
 }
 
-.question > button {
+.btn-toggle {
     width: 15%;
 }
 
 .btn-remove {
     color: black;
-
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
 }
 
-.btn-remove:hover {
-    color: red;
+.btn-remove:disabled {
+    color: grey;
 
-    cursor: hand;
+    cursor: default;
+}
+
+.btn-remove:hover:not(:disabled) {
+    color: red;
 }
 
 .btn-remove {
